test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/sizeof_incomplete_expr.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[0]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: get_ptr
        List[0]: 
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Pointer: 
            Structure: 
              TIdentifier: s
              Bool: 0
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: struct_ptr
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: get_ptr
                      List[0]: 
                      None: 
                    None: 
                  Pointer: 
                    Structure: 
                      TIdentifier: s
                      Bool: 0
                  None: 
            CS: 
              CReturn: 
                CSizeOf: 
                  CDereference: 
                    CVar: 
                      TIdentifier: struct_ptr
                      None: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
